# lapka

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
lapka/: __init__.py  __main__.py  agent.py  config.py  context.py  llm.py  prompts.py
lapka/connectors/: __init__.py  cli.py  telegram.py
lapka/tools/: __init__.py  bash.py  files.py  http.py
