[project]
name = "lapka"
version = "0.1.0"
description = "Ultra-lightweight AI agent. AK-47 of the AI world."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "python-telegram-bot>=21.0",
]

[project.scripts]
lapka = "lapka.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lapka*"]
